# WebToActions

./: .env.example  .gitignore  CLAUDE.md  README.md  findings.md  progress.md  task_plan.md
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260419_0001_stage2_storage_baseline.py  20260419_0002_stage4_review_metadata_noise_requests.py  20260420_0003_recording_scoped_evidence_keys.py
backend/app/: __init__.py  main.py
backend/app/action/: __init__.py  repository.py
backend/app/api/: __init__.py
backend/app/browser/: __init__.py  playwright_bridge.py
backend/app/core/: config.py  domain_model.py
backend/app/evidence/: __init__.py
backend/app/execution/: __init__.py  repository.py
backend/app/importexport/: __init__.py
backend/app/infrastructure/: __init__.py
backend/app/recording/: __init__.py  repository.py
backend/app/review/: __init__.py
backend/app/session/: __init__.py
backend/spikes/: README.md  browser_recording_poc.py
backend/tests/api/: test_health.py
backend/tests/core/: test_config.py
backend/tests/domain/: test_domain_models.py
backend/tests/execution/: test_execution_flow.py
backend/tests/failure/: test_failure_paths.py
backend/tests/importexport/: test_importexport_flow.py
backend/tests/infrastructure/: test_app_runtime.py  test_db_baseline.py  test_recording_repository.py  test_storage_bootstrap.py
backend/tests/recording/: test_recording_flow.py
backend/tests/review/: test_review_flow.py
backend/tests/smoke/: test_smoke.py
docs/: 本地启动说明.md
(+123 files in other folders)
