[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "webtoactions-backend"
version = "0.1.0"
description = "Backend engineering skeleton for WebToActions"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic",
  "fastapi>=0.115.0",
  "pydantic>=2",
  "pydantic-settings>=2",
  "python-multipart",
  "uvicorn[standard]>=0.32.0",
  "playwright>=1.49.0",
  "sqlalchemy",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["app*"]
